Algumas arrumações do html e css

--- a/gerenciamento/templates/funcionarios.html
+++ b/gerenciamento/templates/funcionarios.html
@@ -2,8 +2,8 @@
 {% load static %}
 
 {% block 'head' %}
-    <link rel="stylesheet" href="{% static 'usuarios/css/telaprincipal.css' %}">
-    <link rel="stylesheet" href="{% static 'gerenciamento/css/gerenciamento.css' %}">
+    <link rel="stylesheet" href="{% static 'usuarios/css/principal-oficial.css' %}">
+    <link rel="stylesheet" href="{% static 'gerenciamento/css/gerenciamento-oficial.css' %}">
 {% endblock %}
 
 {% block 'dashboard' %}
@@ -11,8 +11,8 @@
     <br>
     <div class="main-navbar">
         <div class="titulo-funcionarios">
-            <h3 class="titulo-funcionario">Funcionários cadastrados no sistema:</h3>
-            <p class="subtitulo-funcionario">Aqui você pode visualizar todos os funcionários cadastrados no sistema.</p>
+            <h3 class="titulo">Funcionários cadastrados no sistema:</h3>
+            <p class="subtitulo">Aqui você pode visualizar todos os funcionários cadastrados no sistema.</p>
         </div>
         <div class="botoes">
             <div class="add-funcionario" name="addfuncionario">
