--- a/gerenciamento/templates/clientes.html
+++ b/gerenciamento/templates/clientes.html
@@ -2,18 +2,18 @@
 {% load static %}
 
 {% block 'head' %}
-    <link rel="stylesheet" href="{% static 'usuarios/css/telaprincipal.css' %}">
-    <link rel="stylesheet" href="{% static 'gerenciamento/css/gerenciamento.css' %}">
+    <link rel="stylesheet" href="{% static 'usuarios/css/principal-oficial.css' %}">
+    <link rel="stylesheet" href="{% static 'gerenciamento/css/gerenciamento-oficial.css' %}">
 {% endblock %}
 
 {% block 'dashboard' %}
 <body>
     <br>
     <br>
-    <h3 class="titulo-cliente">Usuários cadastrados no sistema:</h2>
-    <p class="subtitulo-cliente">Aqui você pode visualizar todos os usuários cadastrados no sistema.</p>
+    <h3 class="titulo">Usuários cadastrados no sistema:</h2>
+    <p class="subtitulo">Aqui você pode visualizar todos os usuários cadastrados no sistema.</p>
     <br>
-    <div class="container-fluid distanciamento-cliente">
+    <div class="container-fluid distanciamento">
         <table class="table table-dark">
             <thead>
                 <tr>
