--- a/templates/static/usuarios/css/principal-oficial.css
+++ b/templates/static/usuarios/css/principal-oficial.css
@@ -200,12 +200,6 @@ body{
     margin-top: 1rem;
     gap: 1rem;
 }
-.back-menus, .next-menus{
-    cursor: pointer;
-}
-.back-menus:hover, .next-menus:hover{
-    color: var(--differential-color);
-}
 .filter-wrapper{
     display: flex;
     justify-content: flex-start;
@@ -333,27 +327,15 @@ body{
     color: var(--differential-color);
 }
 
-#att-perfil{
-    width: 100%;
-    height: 100%;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
+.botao-add-carrinho{
+    background-color: var(--dark-color);
+    color: white;
+    border: none;
+    border-radius: 20px;
+    width: 210px;
+    cursor: pointer;
+    padding: 9px;
+    align-self: center;
+    margin: 0px 5px 5px 25px;
 }
 
-#form-perfil{
-    display: flex;
-    align-items: center;
-}
-
-#att-perfil .caixa-perfil{
-    width: 1100px;
-    height: 100%;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-}
-
-#pedidos-anteriores-perfil{
-    margin-left: 60px;
-}
