funções de excluir quase concluídas

--- a/gerenciamento/templates/adicionarProduto.html
+++ b/gerenciamento/templates/adicionarProduto.html
@@ -3,7 +3,7 @@
 
 {% block 'head' %}
     <link rel="stylesheet" href="{% static 'gerenciamento/css/addProduto.css' %}">
-    <link rel="stylesheet" href="{% static 'gerenciamento/css/gerenciamento.css' %}">
+    <link rel="stylesheet" href="{% static 'gerenciamento/css/gerenciamento-oficial.css' %}">
 {% endblock %}
 
 {% block 'dashboard' %}
@@ -11,8 +11,8 @@
     <div class="main">
         <div class="main-navbar">
             <div class="titulo-produtos">
-                <h3 class="titulo-produto">Gerenciamento de produto:</h3>
-                <p class="subtitulo-produto">Aqui você pode gerenciar os produtos do sistema.</p>
+                <h3 class="titulo">Gerenciamento de produto:</h3>
+                <p class="subtitulo">Aqui você pode gerenciar os produtos do sistema.</p>
             </div>
             <!--
             <div class="botoes">
