--- a/gerenciamento/templates/produtoGerente.html
+++ b/gerenciamento/templates/produtoGerente.html
@@ -55,7 +55,7 @@
                         <!-- Modal de confirmação -->
                         <div id="modal-confirmacao" style="display: none;">
                             <p>Deseja realmente excluir o produto?</p>
-                            <button onclick="excluirProduto('{{ produto.id_produto }}')">Sim</button>
+                            <a class="btn btn-danger" href="{% url 'excluir_produto' produto.id_produto %}">Excluir</a>
                             <button onclick="fecharModal()">Cancelar</button>
                         </div>
                     </div>
