--- a/gerenciamento/templates/funcionarios.html
+++ b/gerenciamento/templates/funcionarios.html
@@ -60,30 +60,27 @@
             <h2 class="main-title">Atualizar funcionário</h2>
             <p class="label-text">Funcionário: </p>
             <select id="funcionario-select" onchange="dados_funcionario(this)" class="form-control">
-                <option value="" selected disabled hidden>Selecione um funcionário</option>
-                {% for funcionario in funcionarios %}
-                    <option value="{{ funcionario.id_funcionario }}">{{ funcionario.nome_funcionario }}</option>
-                {% endfor %}
+            {% for funcionario in funcionarios %}
+                <option value="{{ funcionario.id_funcionario }}">{{ funcionario.nome_funcionario }}</option>
+            {% endfor %}
             </select>
             <br>
-            <form id="form-att-funcionario" action="{% url 'updateFuncionario' 0 %}" method="POST">
-                {% csrf_token %}
-                <input type="hidden" id="id_funcionario" name="id_funcionario">
+            <form id="form-att-funcionario" action="{% url 'updateFuncionario' %}" method="POST">{% csrf_token %}
                 <div class="row">
                     <div class="col-md">
                         <p class="label-text">Nome do funcionário</p>
-                        <input class="caixa-entrada" type="text" id="nome_funcionario" name="nome" placeholder="Nome do funcionário">
+                        <input class="caixa-entrada" type="text" id="nome_funcionario" name="nome_funcionario" placeholder="Nome do funcionário">
                     </div>
                     <div class="col-md">
                         <p class="label-text">Telefone</p>
-                        <input class="caixa-entrada" type="text" id="telefone_funcionario" name="telefone" placeholder="Telefone do funcionário">
+                        <input class="caixa-entrada" type="text" id="telefone_funcionario" name="telefone_funcionario"  placeholder="Telefone do funcionário">
                     </div>
                 </div>
                 <br>
                 <div class="row">
                     <div class="col-md">
                         <p class="label-text">Cargo</p>
-                        <input class="caixa-entrada" type="text" id="cargo" name="cargo" placeholder="Cargo do funcionário">
+                        <input class="caixa-entrada" type="text" id="cargo" name="cargo"  placeholder="Cargo do funcionário">
                     </div>
                     <div class="col-md">
                         <p class="label-text">Salário (apenas números)</p>
@@ -92,14 +89,15 @@
                 </div>
                 <br>
                 <div class="row">
-                    <button type="submit" class="btn-add-principal">Atualizar</button>
-                    <button type="button" onclick="excluir_funcionario()" class="btn-remover-principal">Excluir</button>
+                    <input type="hidden" id="id_funcionario" name="id_funcionario">
+                    <button type="submit" class="btn btn-success">Atualizar</button>
+                    
                 </div>
             </form>
         </div>
     </div>
         
-
+    <br><br>
     <div class="funcionarios">
         <div class="container-fluid distanciamento-cliente">
             <table class="table table-dark">
@@ -120,7 +118,7 @@
                             <td>{{ funcionario.nome_funcionario }}</td>
                             <td>{{ funcionario.telefone_funcionario }}</td>
                             <td>{{ funcionario.cargo }}</td>
-                            <td>R$ {{ funcionario.salario }}</td>
+                            <td>R$ {{ funcionario.salario|floatformat:2 }}</td>
                             <td>
                                 <a class="btn btn-danger" href="{% url 'excluir_funcionario' funcionario.id_funcionario %}">Excluir</a>
                             </td>
@@ -130,6 +128,8 @@
             </table>
         </div>
     </div>
-    <script src="{% static 'gerenciamento/js/gerenciamento.js' %}"></script>
+    
 </body>
+<script src="{% static 'gerenciamento/js/gerenciamento.js' %}"></script>
+
 {% endblock %}
