--- a/gerenciamento/templates/listarPedidos.html
+++ b/gerenciamento/templates/listarPedidos.html
@@ -13,6 +13,7 @@
     <h3 class="titulo">Pedidos cadastrados no sistema:</h2>
     <p class="subtitulo">Aqui você pode visualizar todos os pedidos cadastrados no sistema.</p>
     <p class="subtitulo">Clique no identificador do pedido para visualizar mais detalhes.</p>
+    <p class="subtitulo">Soma do valor dos pedidos do mês atual: R$ {{ soma_valor_pedidos_mes_atual }}</p>
     <br>
     <div class="container-fluid distanciamento">
         <table class="table table-dark">
