Alterações na manipulação dos dados

--- a/gerenciamento/templates/funcionarios.html
+++ b/gerenciamento/templates/funcionarios.html
@@ -42,11 +42,11 @@
                 <div class="row">
                     <div class="col-md">
                         <p class="label-text">Cargo</p>
-                        <input class="caixa-entrada" type="text" id="cargo" name="cargo" placeholder="Cargo do funcionário" value="{{cargo}}">
+                        <input class="caixa-entrada" type="text" id="cargoAdd" name="cargo" placeholder="Cargo do funcionário" value="{{cargo}}">
                     </div>
                     <div class="col-md">
                         <p class="label-text">Salário (apenas números)</p>
-                        <input class="caixa-entrada" type="text" id="salario" name="salario" placeholder="Salário do funcionário" value="{{salario}}">
+                        <input class="caixa-entrada" type="text" id="salarioAdd" name="salario" placeholder="Salário do funcionário" value="{{salario}}">
                     </div>
                 </div>
                 <br>
