--- a/gerenciamento/templates/adicionarProduto.html
+++ b/gerenciamento/templates/adicionarProduto.html
@@ -28,7 +28,7 @@
     
 
         <div id="add-produto" class="adicionar-produto" name="add-produto">
-            <form action="{% url 'addProduto' %}" method="POST" enctype="multipart/form-data">
+            <form action="{% url 'addProduto' %}" method="POST" enctype="multipart/form-data" onsubmit="substituirVirgulaPorPonto()">
                 {% csrf_token %}
                 <div class="produtoform">
                     <h2 class="main-title">Adicionar produto</h2>
